--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.MyProductDetails {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 main {
   min-height: calc(100vh - 46px);
   height: calc(100vh - 46px);
